Create a list of 5 integers and display the squares of each.